update module text-center, text-image

--- a/src/html/partials/modules/mod-text-center.html
+++ b/src/html/partials/modules/mod-text-center.html
@@ -1,5 +1,8 @@
-<section class="module mod-text-center">
-    <div class="container">
-        <h2>aaaaaaaa</h2>
+<section class="module mod-text-center animation animate-bottom duration-1000">
+    <div class="container text-center">
+        <h2>Các hạng phòng của chúng tôi</h2>
+        <p>Phòng nghỉ rộng rãi và tinh tế của Khách sạn Hà Nội là sự lựa chọn hoàn hảo dành cho những kỳ nghỉ dưỡng hay
+            chuyến công tác dài ngày tại thủ đô. Mỗi phòng đều được trang bị đầy đủ tiện nghi và nội thất, mang lại sự
+            thoải mái và thư giãn tuyệt vời.</p>
     </div>
 </section>
