--- a/src/html/partials/modules/mod-text-image.html
+++ b/src/html/partials/modules/mod-text-image.html
@@ -1,22 +1,150 @@
 <section class="module mod-text-image">
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+        <div class="row g-4 justify-content-center align-items-center ">
+            <div class="col-md-6 animation animate-left">
+                <img class="img-fluid" src="img/slider-banner/PES.webp">
             </div>
-            <div class="col-12 col-md-6"></div>
+            <div class="col-md-6 animation animate-right">
+                <div class="content">
+                    <h3><a href="#">Premium Executive Suite</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 50 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Trải nghiệm sự sang trọng tuyệt đối khi lưu trú tại hạng phòng Premium Executive Suite hướng ra
+                        hồ Giảng Võ thơ mộng. Với thiết kế mang phong cách nhã…</p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6"></div>
-            <div class="col-12 col-md-6"></div>
+        <div class="mt-5"></div>
+
+        <div class="row g-4 flex-row-reverse justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-right">
+                <img class="img-fluid" src="img/slider-banner/PDS.png">
+            </div>
+            <div class="col-md-6 animation animate-left">
+                <div class="content">
+                    <h3><a href="#">Premium Deluxe Suite</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 40 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Tận hưởng sự thư giãn tuyệt đối với phòng Premium Deluxe Suite, nổi bật với không gian đậm nét
+                        đương đại cùng phòng khách tiện nghi, thanh lịch với các… </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6"></div>
-            <div class="col-12 col-md-6"></div>
+        <div class="mt-5"></div>
+        <div class="row g-4 justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-left">
+                <img class="img-fluid" src="img/slider-banner/JS.webp">
+            </div>
+            <div class="col-md-6 animation animate-right">
+                <div class="content">
+                    <h3><a href="#">Junior Suite</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 39 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Phòng Junior Suite là sự cân bằng hoàn hảo giữa yếu tố thẩm mỹ đương thời và sự tiện nghi, bao
+                        gồm phòng khách riêng biệt với đầy đủ tiện… </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6"></div>
-            <div class="col-12 col-md-6"></div>
+        <div class="mt-5"></div>
+        <div class="row g-4 flex-row-reverse justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-right">
+                <img class="img-fluid" src="img/slider-banner/PD.webp">
+            </div>
+            <div class="col-md-6 animation animate-left">
+                <div class="content">
+                    <h3><a href="#">Premium Deluxe</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 28 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Với tầm nhìn tuyệt đẹp hướng ra hồ Giảng Võ thơ mộng và phố phường nhộn nhịp, phòng Premium
+                        Deluxe được thiết kế theo phong cách tối giản và hiện…</p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5"></div>
+        <div class="row g-4 justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-left">
+                <img class="img-fluid" src="img/slider-banner/DS.webp">
+            </div>
+            <div class="col-md-6 animation animate-right">
+                <div class="content">
+                    <h3><a href="#">JDeluxe Suite</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 40 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Khám phá vẻ đẹp mang phong cách cổ điển của phòng Deluxe Suite, nơi Quý khách có thể chiêm ngưỡng
+                        trọn vẹn vẻ đẹp yên bình của hồ Giảng Võ…. </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="mt-5"></div>
+
+        <div class="row g-4 flex-row-reverse justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-right">
+                <img class="img-fluid" src="img/slider-banner/PR.webp">
+            </div>
+            <div class="col-md-6 animation animate-left">
+                <div class="content">
+                    <h3><a href="#">Premium Room</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 24-28 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Tận hưởng kỳ nghỉ đáng nhớ với khung cảnh thành phố đầy sôi động từ phòng Premium Room của Khách
+                        sạn Hà Nội. Không gian trang nhã, thanh lịch cùng… </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5"></div>
+        <div class="row g-4 justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-left">
+                <img class="img-fluid" src="img/slider-banner/ES.webp">
+            </div>
+            <div class="col-md-6 animation animate-right">
+                <div class="content">
+                    <h3><a href="#">Executive Suite</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 50 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Tối giản nhưng đầy tinh tế, Phòng Executive Suite sở hữu phòng khách sang trọng, bàn làm việc
+                        trang nhã và phòng ngủ êm ái, đem đến không gian hoàn… </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5"></div>
+        <div class="row g-4 flex-row-reverse justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-right">
+                <img class="img-fluid" src="img/slider-banner/DR.png">
+            </div>
+            <div class="col-md-6 animation animate-left">
+                <div class="content">
+                    <h3><a href="#">Deluxe Room</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 28 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Trải nghiệm không gian tinh tế của hạng phòng Deluxe Room với thiết kế đậm chất cổ điển, hòa
+                        quyện cùng tông màu ấm áp và hệ thống nội thất… </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
+        </div>
+        <div class="mt-5"></div>
+        <div class="row g-4 justify-content-center align-items-center">
+            <div class="col-md-6 animation animate-left">
+                <img class="img-fluid" src="img/slider-banner/FR.webp">
+            </div>
+            <div class="col-md-6 animation animate-right">
+                <div class="content">
+                    <h3><a href="#">Family Room</a></h3>
+                    <h5>2 Người lớn & 1 Trẻ em / 50 m<sup>2</sup></h5>
+                    <div class="divider"></div>
+                    <p>Family Room mang đến sự ấm cúng với không gian rộng rãi gồm hai phòng ngủ riêng biệt, được trang
+                        bị đầy đủ các tiện nghi. Đây sẽ là lựa… </p>
+                    <a href="#" class="btn btn-outline-secondary">Xem phòng</a>
+                </div>
+            </div>
         </div>
     </div>
 </section>
