--- a/src/sass/common/_base.scss
+++ b/src/sass/common/_base.scss
@@ -8,3 +8,10 @@ body, html {
 *:focus {
     box-shadow: none !important;
 }
+.divider {
+    width: 70px;
+    height: 3px;
+    background-color: $secondary;
+    margin: 5px 0;
+    display: inline-block;
+}
