update module banner slider, moduleadd mteâẽâext image homepage

--- a/src/html/partials/modules/mod-banner-slider.html
+++ b/src/html/partials/modules/mod-banner-slider.html
@@ -28,4 +28,51 @@
             </div>
         </div>
     </div>
+    <div class="booking-form container">
+        <div class="booking-form-wrapper text-white">
+            <form class="row gx-4 gy-3 align-items-center justify-content-center">
+                <div class="col-6 col-xl-3">
+                    <label for="checkin">Nhận phòng*</label>
+                    <input type="text" id="checkin" class="form-control" placeholder="Ngày nhận phòng" readonly>
+                </div>
+                <div class="col-6 col-xl-3">
+                    <label for="checkout">Trả phòng*</label>
+                    <input type="text" id="checkout" class="form-control" placeholder="Ngày trả phòng" readonly>
+                </div>
+                <div class="col-6 col-xl-2">
+                    <label for="adults">Người lớn*</label>
+                    <select class="form-select" id="adults">
+                        <option value="2" selected>2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div class="col-6 col-xl-2">
+                    <label for="adults">Trẻ em*</label>
+                    <select class="form-select" id="adults">
+                        <option value="0" selected>0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div class="col-12 col-xl-2 align-self-end">
+                    <button type="submit" class="btn btn-white w-100">Đặt phòng</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </section>
