--- a/src/sass/common/_buttons.scss
+++ b/src/sass/common/_buttons.scss
@@ -24,3 +24,14 @@
         background-color: $secondary;
     }
 }
+
+.btn-white {
+    background-color: $white;
+    color: $primary;
+    border: 1px solid $white;
+    &:hover {
+        color: $white;
+        background-color: transparent;
+        border: 1px solid $white;
+    }
+}
