--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,5 +44,6 @@ $theme-colors: (
 @import 'common/animation';
 @import 'common/lazyload';
 @import 'common/buttons';
+@import 'common/form';
 
 @import "modules/*.scss";
