update page acconmodations mod-contact-form

--- a/src/html/partials/modules/mod-contact-form.html
+++ b/src/html/partials/modules/mod-contact-form.html
@@ -1,5 +1,37 @@
 <section class="module mod-text-center animation animate-bottom duration-1000">
     <div class="container text-center">
+        <div class="row justify-content-center align-items-center w-100 ">
+            <div class="consultation-section ">
+                <!-- Left Text -->
+                <div class="row justify-content-center align-items-center fs-3 m-auto" style="width: 90%">
+                    <div class="col-md-6">
+                        <h2 class="fs-1 fw-bold">Bạn cần tư vấn?</h2>
+                        <p>Hãy chia sẻ ý kiến của bạn với chúng tôi. Đừng quên để lại thông tin liên lạc của bạn ở biểu mẫu
+                            bên cạnh nhé!</p>
+                    </div>
+                    <!-- Right Form -->
+                    <div class="col-md-6">
+                        <form>
+                            <div class="row mb-3">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Họ và tên">
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Số điện thoại">
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="mb-3">
+                                <textarea class="form-control" rows="3" placeholder="Lời nhắn"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-secondary ">Gửi</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 </section>
