--- a/src/sass/common/_buttons.scss
+++ b/src/sass/common/_buttons.scss
@@ -24,3 +24,9 @@
         background-color: $secondary;
     }
 }
+.btn-submit {
+    border: 1px solid #fff;
+    color: white;
+    background: transparent;
+    padding: 8px 30px;
+}
