--- a/src/sass/common/_variables.scss
+++ b/src/sass/common/_variables.scss
@@ -14,5 +14,4 @@ $headings-font-weight: 700 !default;
 $headings-line-height: 1.2 !default;
 $headings-color: #111 !default;
 $headings-margin-bottom: $spacer * .75 !default;
-
-
+$light-blue: #F8F9FF;
