--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -5,7 +5,7 @@
             background-color: $white;
         }
         .nav-link {
-            color: $primary;
+            color: $primary !important;
             &:hover {
                 text-shadow: none;
                 color: $secondary;
