--- a/src/html/partials/modules/mod-banner-slider.html
+++ b/src/html/partials/modules/mod-banner-slider.html
@@ -2,20 +2,20 @@
     <div class="banner-slider">
         <div class="slide position-relative">
             <div class="slide-image position-relative w-100vw h-100vh">
-                <img class="position-absolute top-0 left-0 w-100 h-100 object-fit-cover" src="img/slider-banner/hotel-19023.webp" alt="Slide 1">
-            </div>
-            <div class="slide-content text-center">
-                <h1>Hanoi Hotel</h1>
-                <p>Live Oriental Heritage</p>
-            </div>
-        </div>
-        <div class="slide position-relative">
-            <div class="slide-image position-relative w-100vw h-100vh">
                 <img class="position-absolute top-0 left-0 w-100 h-100 object-fit-cover" src="img/slider-banner/hotel-a4.webp" alt="Slide 1">
             </div>
             <div class="slide-content text-center">
                 <h2 class="h1">Hanoi Hotel</h2>
-                <p>Live Oriental Heritage</p>
+                <p class="fs-1 text-uppercase">Live Oriental Heritage</p>
+            </div>
+        </div>
+        <div class="slide position-relative">
+            <div class="slide-image position-relative w-100vw h-100vh">
+                <img class="position-absolute top-0 left-0 w-100 h-100 object-fit-cover" src="img/slider-banner/hotel-19023.webp" alt="Slide 1">
+            </div>
+            <div class="slide-content text-center">
+                <h1>Hanoi Hotel</h1>
+                <p class="fs-1 text-uppercase">Live Oriental Heritage</p>
             </div>
         </div>
         <div class="slide position-relative">
@@ -24,11 +24,11 @@
             </div>
             <div class="slide-content text-center">
                 <h2 class="h1">Hanoi Hotel</h2>
-                <p>Live Oriental Heritage</p>
+                <p class="fs-1 text-uppercase">Live Oriental Heritage</p>
             </div>
         </div>
     </div>
-    <div class="booking-form container">
+    <div class="booking-form container animation animate-fade">
         <div class="booking-form-wrapper text-white">
             <form class="row gx-4 gy-3 align-items-center justify-content-center">
                 <div class="col-6 col-xl-3">
