--- a/src/sass/modules/_mod-banner_slider.scss
+++ b/src/sass/modules/_mod-banner_slider.scss
@@ -4,13 +4,15 @@
         height: 100vh;
     }
     .slide-content {
+        width: 100%;
         position: absolute;
-        bottom: 50%;
+        top: 50%;
         left: 50%;
         color: #fff;
         opacity: 0;
         transform: translate(-50%, calc(-50% + 40px));
         transition: opacity 0.6s ease, transform 0.8s ease;
+        transition-delay: 0.8s;
         & > *:last-child {
             margin-bottom: 0;
         }
@@ -27,9 +29,9 @@
 
     .booking-form {
         position: absolute;
-        bottom: 60px;
+        bottom: 32px;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translateX(-50%) !important;
         .booking-form-wrapper {
             padding: 24px;
             background: rgba(255, 255, 255, 0.2);
@@ -46,6 +48,7 @@
         }
 
         .booking-form {
+            bottom: 60px;
             .booking-form-wrapper {
                 padding: 32px;
             }
