update booking form

--- a/src/sass/common/_form.scss
+++ b/src/sass/common/_form.scss
@@ -12,8 +12,11 @@
     color: inherit;
     &:focus {
         background-color: transparent;
-        color: $primary;
+        color: inherit;
         border-color: $white;
+        option {
+            color: $primary;
+        }
     }
 }
 
