--- a/src/html/partials/modules/mod-banner-slider.html
+++ b/src/html/partials/modules/mod-banner-slider.html
@@ -31,15 +31,30 @@
     <div class="booking-form container animation animate-fade">
         <div class="booking-form-wrapper text-white">
             <form class="row gx-4 gy-3 align-items-center justify-content-center">
-                <div class="col-6 col-xl-3">
+                <div class="col-6 col-xl-2">
                     <label for="checkin">Nhận phòng*</label>
                     <input type="text" id="checkin" class="form-control" placeholder="Ngày nhận phòng" readonly>
                 </div>
-                <div class="col-6 col-xl-3">
+                <div class="col-6 col-xl-2">
                     <label for="checkout">Trả phòng*</label>
                     <input type="text" id="checkout" class="form-control" placeholder="Ngày trả phòng" readonly>
                 </div>
-                <div class="col-6 col-xl-2">
+                <div class="col-4 col-xl-2">
+                    <label for="quantity">Số phòng*</label>
+                    <select class="form-select" id="quantity">
+                        <option value="1" selected>1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div class="col-4 col-xl-2">
                     <label for="adults">Người lớn*</label>
                     <select class="form-select" id="adults">
                         <option value="2" selected>2</option>
@@ -53,7 +68,7 @@
                         <option value="10">10</option>
                     </select>
                 </div>
-                <div class="col-6 col-xl-2">
+                <div class="col-4 col-xl-2">
                     <label for="adults">Trẻ em*</label>
                     <select class="form-select" id="adults">
                         <option value="0" selected>0</option>
