update page detail

--- a/src/html/partials/modules/mod-contact-form.html
+++ b/src/html/partials/modules/mod-contact-form.html
@@ -26,7 +26,7 @@
                             <div class="mb-3">
                                 <textarea class="form-control" rows="3" placeholder="Lời nhắn"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-secondary ">Gửi</button>
+                            <button type="submit" class="btn btn-outline-white w-25">Gửi</button>
                         </form>
                     </div>
                 </div>
