--- a/src/html/partials/modules/mod-parallax-banner.html
+++ b/src/html/partials/modules/mod-parallax-banner.html
@@ -2,10 +2,10 @@
     <div class="banner-slider">
         <div class="slide position-relative">
             <div class="slide-image position-relative w-100vw h-100vh">
-                <img class="position-absolute top-0 left-0 w-100 h-100 object-fit-cover" src="img/slider-banner/room.jpg" alt="Slide 1">
+                <img class="position-absolute top-0 left-0 w-100 h-100 object-fit-cover" src="img/slider-banner/PES.webp" alt="Slide 1">
             </div>
             <div class="slide-content text-center">
-                <h2>Đắm chìm trong không gian nghỉ dưỡng sang trọng.</h2>
+                <h1>Premium Executive Suite</h1>
             </div>
         </div>
     </div>
